--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+android/app/google-services.json
+.gitignore
+ios/firebase_app_id_file.json
+macos/firebase_app_id_file.json
+lib/firebase_options.dart
+ios/Runner/GoogleService-Info.plist
+.gitignore
